; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_mm_init.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_mm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double** @mm_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double**, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = sext i32 %5 to i64
  %7 = mul i64 %6, 8
  %8 = trunc i64 %7 to i32
  %9 = call i64 @malloc(i32 %8)
  %10 = inttoptr i64 %9 to double**
  store double** %10, double*** %3, align 8
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %22, %1
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %2, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %11
  %16 = load i32, i32* %2, align 4
  %17 = call double* @calloc(i32 %16, i32 8)
  %18 = load double**, double*** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds double*, double** %18, i64 %20
  store double* %17, double** %21, align 8
  br label %22

22:                                               ; preds = %15
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %4, align 4
  br label %11

25:                                               ; preds = %11
  %26 = load double**, double*** %3, align 8
  ret double** %26
}

declare dso_local i64 @malloc(i32) #1

declare dso_local double* @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
